<resources>
    <string name="app_name">PSD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_fragment_home">Pattonville</string>
    <string name="title_fragment_news">News</string>
    <string name="title_fragment_calendar">Calendar</string>
    <string name="title_fragment_directory">Directory</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_directoryDetail">Directory</string>
    <string name="calendar_fragment_action_today_title">Go To Today</string>

    <string name="key_school_selection">school_selection</string>
    <string name="key_powerschool_intent">powerschool_intent</string>
    <string name="key_home_newsamount">home_news_amount</string>
    <string name="key_home_eventsamount">home_events_amount</string>
    <string name="key_home_pinnedamount">home_pinned_amount</string>
    <string name="key_news_notifications">news_notifications</string>
    <string name="key_nutrislice_intent">nutrislice_intent</string>
    <string name="key_carousel_visibility">carousel_visibility</string>

    <string-array name="schools">
        <item>High School</item>
        <item>Heights</item>
        <item>Holman</item>
        <item>Remington</item>
        <item>Bridgeway</item>
        <item>Drummond</item>
        <item>Rose Acres</item>
        <item>Parkwood</item>
        <item>Willow Brook</item>
        <item>Early Childhood</item>
    </string-array>

    <string name="title_activity_calendar_event_details">Event Details</string>
    <string name="action_settings">Settings</string>
    <string name="event_image">Event Image</string>
    <string name="date_time_placeholder">Date here…\nTime here…</string>
    <string name="location_placeholder">Location here…</string>
    <string name="extra_info_placeholder">Extra information here…</string>
    <string name="logo_content_description">Logo</string>

    <string name="directory_detail_school_name">School Name Here…</string>
    <string name="directory_school_image">School Image Here</string>
    <string name="directory_school_websiteURL">Website</string>
    <string name="directory_info_unavaiable">N/A</string>

    <string name="package_name_powerschool">com.powerschool.portal</string>
    <string name="package_name_nutrislice">com.nutrislice.schoollunch</string>

    <string name="pin_content_description">Pin</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="home_news_header_text">RECENT NEWS</string>
    <string name="sample_news">Placeholder News</string>
    <string name="home_upcoming_events_header_text">UPCOMING EVENTS</string>
    <string name="event_placeholder">Pattonville App Release</string>
    <string name="no_location">No location provided…</string>
    <string name="no_summary">No summary provided…</string>
    <string name="text_top_transition_name">text_top_transition</string>
    <string name="text_bottom_transition_name">text_bottom</string>
    <string name="school_color_circle_transition_name">school_color_circle</string>
    <string name="test_text">Test text</string>
    <string name="home_pinned_events_header_text">PINNED EVENTS</string>
    <string name="see_more">See More</string>
    <string name="school_color_circle">School color circle</string>
    <string name="app_intro">Pattonville App Intro</string>

    <string name="preferences_schools_summary">Select schools from which you wish to receive information</string>
    <string name="preferences_schools_title">Select Schools</string>

    <string name="test_date">Test Date: 01/02/2017</string>

    <string name="nav_drawer_title_home">Home</string>
    <string name="nav_drawer_title_news">News</string>
    <string name="nav_drawer_title_calendar">Calendar</string>
    <string name="nav_drawer_title_directory">Directory</string>
    <string name="nav_drawer_title_district_website">District Website</string>
    <string name="nav_drawer_title_nutrislice">Nutrislice (Menus)</string>
    <string name="nav_drawer_title_powerschool">Powerschool</string>
    <string name="nav_drawer_title_peachjar">Peachjar (E-Flyers)</string>
    <string name="nav_drawer_title_activities">Activities</string>
    <string name="nav_drawer_title_notifications">Notifications</string>
    <string name="nav_drawer_title_settings">Settings</string>
    <string name="nav_drawer_title_feedback">Feedback</string>
    <string name="nav_drawer_title_moodle">Moodle</string>
    <string name="zero_home_items_selected_textview">No News Articles or Events set to show up. Go into settings and change your Home preferences to see information here.</string>

    <string name="calendar_fragment_action_refresh">Refresh</string>
    <string name="calendar_fragment_action_today_title_condensed">Today</string>

    <string name="action_search">Search</string>
    <string name="homeLoadingNewsText">Loading News Data…</string>
    <string name="homeLoadingEventsText">Loading Calendar Data…</string>
    <string name="home_news_article_source">News Article Source</string>

    <string name="no_data_loaded_yet_message">No data loaded, please wait…</string>
    <string name="no_pinned_events_provided_message">No events pinned yet…</string>
    <string name="add_to_your_calendar_title">Add To Your Calendar</string>
    <string name="add_to_your_calendar_title_condensed">Add Event</string>
    <string name="title_activity_peachjar">Peachjar Links</string>
    <string name="title_activity_nutrislice">Nutrislice Links</string>

    <string name="preference_summary_news">" News Articles Displayed"</string>
    <string name="preference_summary_upcoming">" Upcoming Events Displayed"</string>
    <string name="preference_summary_pinned">" Pinned Events Displayed"</string>
    <string name="title_district_website">District Website</string>
    <string name="title_school_website">School Website</string>
    <string name="directory_name_all_schools">All Schools</string>
    <string name="directory_fax_title">Fax:</string>
    <string name="directory_attendance_title">Attendance:</string>
    <string name="directory_phone_title">Phone:</string>
    <string name="nav_drawer_title_about">About Us</string>
    <string name="wells_watched">Wells watched: %1$,d\n\nCurrent multiplier: %2$,dx</string>
    <string name="reset">Reset</string>
    <string name="secret_shop_action_title">Shop</string>
    <string name="insert_calendar_event_failure">Sorry, this device does not support inserting calendar events. Please contact the developers through the Play Store if this feature is necessary.</string>
    <string name="date_time_newline">%1$s\n%2$s</string>
    <string name="email_faculty">Email faculty</string>
    <string name="call_faculty">Call faculty</string>
    <string name="faculty_name">%1$s %2$s</string>
    <string name="school_image">School image</string>
    <string name="address">Address:</string>
    <string name="main_phone">Main Phone:</string>
    <string name="attendance_phone">Attendance Phone:</string>
    <string name="fax">Fax:</string>
    <string name="website">Website</string>
    <string name="no_phone_capabilities_found">No phone capabilities found! Does this device have calling support?</string>
    <string name="phone_denied">Phone call permission is required to place a call!</string>
    <plurals name="secret_purchase_toast">
        <item quantity="one">Purchased %1$,d item!</item>
        <item quantity="other">Purchased %1$,d items!</item>
    </plurals>

</resources>
