<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/school_color_circle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/school_color_circle"
        android:src="@drawable/event_color_circle"
        android:tint="@color/colorPrimary"
        android:transitionName="school_color_circle" />

    <TextView
        android:id="@+id/extra_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/school_color_circle"
        android:layout_toStartOf="@id/school_color_circle"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_calendar_text_grey600_36dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_calendar_text_grey600_36dp"
        android:padding="16dp"
        android:text="@string/extra_info_placeholder"
        android:transitionName="top_text" />

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/extra_info"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_calendar_clock_grey600_36dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_calendar_clock_grey600_36dp"
        android:padding="16dp"
        android:text="@string/date_time_placeholder" />


    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_and_date"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_map_marker_grey600_36dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_map_marker_grey600_36dp"
        android:padding="16dp"
        android:text="@string/location_placeholder"
        android:transitionName="text_bottom" />

</RelativeLayout>