<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.pattonvillecs.pattonvilleapp.fragments.calendar.CalendarEventDetailsActivity"
    tools:showIn="@layout/activity_calendar_event_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_and_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_calendar_clock_grey600_36dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_calendar_clock_grey600_36dp"
            android:padding="16dp"
            android:text="@string/date_time_placeholder" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_map_marker_grey600_36dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_map_marker_grey600_36dp"
            android:padding="16dp"
            android:text="@string/location_placeholder" />

        <TextView
            android:id="@+id/extra_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_calendar_text_grey600_36dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_calendar_text_grey600_36dp"
            android:padding="16dp"
            android:text="@string/extra_info_placeholder" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
