<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/school_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/school_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/colorPrimary" />

    <TextView
        android:id="@+id/address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/address"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/address"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/address_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Address here" />

    <android.support.constraint.Barrier
        android:id="@+id/address_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="address_title,address" />

    <TextView
        android:id="@+id/main_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/main_phone"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/main_phone"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/address_barrier" />

    <TextView
        android:id="@+id/main_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_phone_title"
        app:layout_constraintTop_toBottomOf="@id/address_barrier"
        tools:text="(123) 456-7890" />

    <android.support.constraint.Barrier
        android:id="@+id/main_phone_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="main_phone_title,main_phone" />

    <TextView
        android:id="@+id/attendance_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/attendance_phone"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/attendance_phone"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/main_phone_barrier" />

    <TextView
        android:id="@+id/attendance_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/attendance_phone_title"
        app:layout_constraintTop_toBottomOf="@id/main_phone_barrier"
        tools:text="(123) 456-7890" />

    <android.support.constraint.Barrier
        android:id="@+id/attendance_phone_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="attendance_phone_title,attendance_phone" />

    <TextView
        android:id="@+id/fax_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/fax"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/fax"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/attendance_phone_barrier" />

    <TextView
        android:id="@+id/fax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fax_title"
        app:layout_constraintTop_toBottomOf="@id/attendance_phone_barrier"
        tools:text="(123) 456-7890" />

    <android.support.constraint.Barrier
        android:id="@+id/fax_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="fax_title,fax" />

    <android.support.constraint.Barrier
        android:id="@+id/header_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="school_image,fax_barrier" />

    <TextView
        android:id="@+id/website"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@null"
        android:text="@string/website"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_barrier" />


</android.support.constraint.ConstraintLayout>